src/types/tests/snapshots/tgbot__types__tests__rich__input_rich_message-2.snap
---
source: src/types/tests/rich.rs
expression: "InputRichMessage::html(\"test\")"
---
{
  "html": "test"
}
