src/types/tests/snapshots/tgbot__types__tests__rich__input_rich_message.snap
---
source: src/types/tests/rich.rs
expression: "InputRichMessage::markdown(\"test\")"
---
{
  "markdown": "test"
}
