src/types/tests/snapshots/tgbot__types__tests__rich__rich_message-2.snap
---
source: src/types/tests/rich.rs
expression: "RichMessage::from([\"test\"]).with_is_rtl(true)"
---
{
  "blocks": [
    {
      "type": "paragraph",
      "text": "test"
    }
  ],
  "is_rtl": true
}
