src/types/tests/snapshots/tgbot__types__tests__rich__rich_message.snap
---
source: src/types/tests/rich.rs
expression: "RichMessage::from([\"test\"])"
---
{
  "blocks": [
    {
      "type": "paragraph",
      "text": "test"
    }
  ]
}
