src/types/tests/snapshots/tgbot__types__tests__rich__send_rich_message-2.snap
---
source: src/types/tests/rich.rs
expression: actual_form.into_fields()
---
[
    (
        "allow_paid_broadcast",
        FormValue::Text(
            "true",
        ),
    ),
    (
        "business_connection_id",
        FormValue::Text(
            "test",
        ),
    ),
    (
        "chat_id",
        FormValue::Text(
            "1",
        ),
    ),
    (
        "direct_messages_topic_id",
        FormValue::Text(
            "1",
        ),
    ),
    (
        "disable_notification",
        FormValue::Text(
            "true",
        ),
    ),
    (
        "message_effect_id",
        FormValue::Text(
            "test",
        ),
    ),
    (
        "message_thread_id",
        FormValue::Text(
            "1",
        ),
    ),
    (
        "protect_content",
        FormValue::Text(
            "true",
        ),
    ),
    (
        "reply_markup",
        FormValue::Text(
            "{\"force_reply\":true}",
        ),
    ),
    (
        "reply_parameters",
        FormValue::Text(
            "{\"message_id\":1}",
        ),
    ),
    (
        "rich_message",
        FormValue::Text(
            "{\"html\":\"test\",\"media\":[{\"id\":\"id\",\"media\":{\"type\":\"animation\",\"media\":\"test\"}}],\"is_rtl\":true}",
        ),
    ),
    (
        "suggested_post_parameters",
        FormValue::Text(
            "{}",
        ),
    ),
]
