src/types/tests/snapshots/tgbot__types__tests__rich__send_rich_message.snap
---
source: src/types/tests/rich.rs
expression: actual_form.into_fields()
---
[
    (
        "chat_id",
        FormValue::Text(
            "1",
        ),
    ),
    (
        "rich_message",
        FormValue::Text(
            "{\"markdown\":\"test\",\"skip_entity_detection\":true}",
        ),
    ),
]
