src/types/tests/snapshots/tgbot__types__tests__rich__send_rich_message_draft-2.snap
---
source: src/types/tests/rich.rs
expression: actual_form.into_fields()
---
[
    (
        "chat_id",
        FormValue::Text(
            "1",
        ),
    ),
    (
        "draft_id",
        FormValue::Text(
            "2",
        ),
    ),
    (
        "message_thread_id",
        FormValue::Text(
            "1",
        ),
    ),
    (
        "rich_message",
        FormValue::Text(
            "{\"markdown\":\"test\"}",
        ),
    ),
]
