src/types/tests/snapshots/tgbot__types__tests__rich__send_rich_message_draft.snap
---
source: src/types/tests/rich.rs
expression: actual_data
---
{
  "chat_id": "1",
  "draft_id": "2",
  "rich_message": {
    "markdown": "test"
  }
}
